migrate URL to URI as we never need openStream or openConnection
- and add nullness check as URI throws unchecked NPE if String is null while
 URL used to throw a checked Exception