@@ -25,8 +25,8 @@ import org.xmlpull.v1.XmlPullParserFactory;
 
 import java.io.IOException;
 import java.io.StringReader;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.ParseException;
 
 /**
@@ -56,14 +56,14 @@ public class DialDevice {
 	private final String mManufacturer;
 	private final String mModelName;
 	private final String mUuid;
-	private final URL mDialApplURL;
+	private final URI mDialApplURI;
 
-	public DialDevice(String uuid, String friendlyName, String manufacturer, String modelName, URL urlBase) {
+	public DialDevice(String uuid, String friendlyName, String manufacturer, String modelName, URI urlBase) {
 		mUuid = uuid;
 		mFriendlyName = friendlyName;
 		mManufacturer = manufacturer;
 		mModelName = modelName;
-		mDialApplURL = urlBase;
+		mDialApplURI = urlBase;
 	}
 
     /**
@@ -106,14 +106,10 @@ public class DialDevice {
 	 * Retrieve the Dial application URL found in device tag URLBase or the one provided
 	 * to fromDeviceDescription if it comes from a header.
 	 *
-	 * @return
+	 * @return a URI object representing the Dial application URL
 	 */
-	public String getDialApplURL() {
-		return mDialApplURL.toString();
-	}
-
-	public URL getDialURL() {
-		return mDialApplURL;
+	public URI getDialURI() {
+		return mDialApplURI;
 	}
 
 	/**
@@ -130,7 +126,7 @@ public class DialDevice {
 		String modelName = null;
 		String uuid = null;
 		String urlBase = dialUrlHeader;
-		URL url;
+		URI url;
 		try {
 			XmlPullParserFactory factory = XmlPullParserFactory.newInstance();
 			factory.setNamespaceAware(true);
@@ -175,16 +171,19 @@ public class DialDevice {
 				eventType = parser.next();
 			}
 			sr.close();
-			url = new URL(urlBase);
-
+			if(urlBase != null) {
+				url = new URI(urlBase);
+				return new DialDevice(uuid, friendlyName, manufacturer, modelName, url);
+			} else {
+				throw new ParseException("Could find Dial URL", -1);
+			}
 		} catch (XmlPullParserException e) {
 			throw new ParseException("Could not parse device description ", e.getLineNumber());
-		} catch (MalformedURLException e) {
-			throw new ParseException("Could find Dial URL", -1);
 		} catch (IOException e) {
 			throw new ParseException("Could not parse device description", -1);
+		} catch (URISyntaxException e) {
+			throw new ParseException("Could find Dial URL", -1);
 		}
-		return new DialDevice(uuid, friendlyName, manufacturer, modelName, url);
 	}
 
     @Override
@@ -201,7 +200,7 @@ public class DialDevice {
         if (mModelName != null ? !mModelName.equals(that.mModelName) : that.mModelName != null)
             return false;
         if (mUuid != null ? !mUuid.equals(that.mUuid) : that.mUuid != null) return false;
-        return mDialApplURL != null ? mDialApplURL.equals(that.mDialApplURL) : that.mDialApplURL == null;
+        return mDialApplURI != null ? mDialApplURI.equals(that.mDialApplURI) : that.mDialApplURI == null;
 
     }
 
@@ -211,7 +210,7 @@ public class DialDevice {
         result = 31 * result + (mManufacturer != null ? mManufacturer.hashCode() : 0);
         result = 31 * result + (mModelName != null ? mModelName.hashCode() : 0);
         result = 31 * result + (mUuid != null ? mUuid.hashCode() : 0);
-        result = 31 * result + (mDialApplURL != null ? mDialApplURL.hashCode() : 0);
+        result = 31 * result + (mDialApplURI != null ? mDialApplURI.hashCode() : 0);
         return result;
     }
 }
