@@ -26,6 +26,7 @@ import org.mockito.Mockito;
 import org.powermock.core.classloader.annotations.PowerMockIgnore;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.text.ParseException;
 import java.util.concurrent.TimeUnit;
@@ -120,7 +121,7 @@ public class DialDialDeviceInventoryTest {
         callback.await(2, TimeUnit.SECONDS);
         verify(callback, times(1)).onDeviceAdded(any(DialDevice.class));
         assertThat(mgr.getDeviceDescriptions(), hasSize(1));
-        assertThat(mgr.getDeviceDescriptions(), hasItem(new DialDevice("11111111-1111-1111-1111-111111111111", "device1", "OCast", "OCast", new URL("http://127.0.0.1:8008/apps"))));
+        assertThat(mgr.getDeviceDescriptions(), hasItem(new DialDevice("11111111-1111-1111-1111-111111111111", "device1", "OCast", "OCast", URI.create("http://127.0.0.1:8008/apps"))));
     }
 
     @Test
@@ -142,9 +143,9 @@ public class DialDialDeviceInventoryTest {
         verify(callback, times(2)).onDeviceAdded(any(DialDevice.class));
         assertThat(mgr.getDeviceDescriptions(), hasSize(2));
         assertThat(mgr.getDeviceDescriptions(), containsInAnyOrder(new DialDevice("11111111-1111-1111-1111-111111111111",
-                        "device1", "OCast", "OCast", new URL("http://127.0.0.1:8008/apps")),
+                        "device1", "OCast", "OCast", URI.create("http://127.0.0.1:8008/apps")),
                 new DialDevice("22222222-2222-2222-2222-222222222222",
-                        "device2", "OCast", "OCast", new URL("http://127.0.0.1:8008/apps"))));
+                        "device2", "OCast", "OCast", URI.create("http://127.0.0.1:8008/apps"))));
     }
 
     @Test
@@ -192,7 +193,7 @@ public class DialDialDeviceInventoryTest {
         verify(callback, times(2)).onDeviceAdded(any(DialDevice.class));
         assertThat(mgr.getDeviceDescriptions(), hasSize(1));
         assertThat(mgr.getDeviceDescriptions(), hasItem(new DialDevice("11111111-1111-1111-1111-111111111111",
-                "nouveau nom", "OCast", "OCast", new URL("http://127.0.0.1:8008/apps"))));
+                "nouveau nom", "OCast", "OCast", URI.create("http://127.0.0.1:8008/apps"))));
     }
 
     @Test
